move styles from .elm to external .less file

--- a/src/static/styles.less
+++ b/src/static/styles.less
@@ -19,3 +19,64 @@
 .btn-disrupted {
   background-color: #C7E8AC;
 }
+
+.productivity-block {
+  font-size: 24px;
+  background-color: teal;
+  text-align: center;
+  margin: 0 50px;
+}
+.productivity-disrupted {
+  background-color: red;
+}
+
+.timer-label {
+  text-align: center;
+  display: block;
+}
+.timer {
+  font-size: 42px;
+  text-align: center;
+}
+.user-info-initial {
+  text-align: center;
+}
+.user-info-running {
+  display: block;
+  text-align: center;
+}
+.blame-visible {
+  text-align: center;
+  display: block;
+  border: 2px solid black;
+  border-radius: 30px;
+  background-color: red;
+  height: 36px;
+  line-height: 36px;
+  margin: 0px 100px 0px 100px;
+  font-size: 24px;
+}
+.blame-hidden {
+  display: none;
+}
+.flowclock-common {
+  display: block;
+  width: 500px;
+  margin: auto;
+  padding-bottom: 10px;
+}
+.just-started {
+  background-color: lightgrey;
+}
+.getting-there {
+  background-color: lightgoldenrodyellow;
+}
+.working-on-it {
+  background-color: lightgreen;
+}
+.on-fire {
+  background-color: limegreen;
+}
+.ommmmm {
+  background-color: darkgreen;
+}
