--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -1,3 +1,7 @@
+$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+@import '~bootstrap-sass/assets/stylesheets/bootstrap/_mixins.scss';
+@import '~bootstrap-sass/assets/stylesheets/_bootstrap.scss';
+
 .btn-common {
   display: block;
   margin: auto;
